--- a/gui/css/variables.css
+++ b/gui/css/variables.css
@@ -99,6 +99,7 @@
   --z-sticky: 200;
   --z-modal: 300;
   --z-toast: 400;
+  --z-tooltip: 9999;
 
   /* Layout */
   --header-height: 56px;
